Updated Home page, Latest Works and JS Games

--- a/index.html
+++ b/index.html
@@ -239,7 +239,11 @@
       <!-- end of section title -->
       <div class="section-center projects-center">
         <!-- single project -->
-        <a href="projects.html" class="project-1">
+        <a
+          href="https://luque-backroads.netlify.app/"
+          class="project-1"
+          target="_blank"
+        >
           <article class="project">
             <img
               src="./images/backroads.jpg"
@@ -254,7 +258,11 @@
         </a>
         <!--end of single project -->
         <!-- single project -->
-        <a href="projects.html" class="project-2">
+        <a
+          href="https://luque-tea-project.netlify.app/"
+          class="project-2"
+          target="_blank"
+        >
           <article class="project">
             <img
               src="./images/tea station.jpg"
@@ -269,7 +277,11 @@
         </a>
         <!--end of single project -->
         <!-- single project -->
-        <a href="projects.html" class="project-3">
+        <a
+          href="https://porfolio-project-01.netlify.app/"
+          class="project-3"
+          target="_blank"
+        >
           <article class="project">
             <img
               src="./images/Doe Portfolio.jpg"
@@ -284,16 +296,20 @@
         </a>
         <!--end of single project -->
         <!-- single project -->
-        <a href="projects.html" class="project-4">
+        <a
+          href="https://js-29-e-commerce-store.netlify.app/"
+          class="project-4"
+          target="_blank"
+        >
           <article class="project">
             <img
-              src="./images/project-4.jpeg"
+              src="./images/29-e-commerce.jpg"
               alt="single project"
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>Javascript comfy store</h4>
+              <p>comfy store</p>
             </div>
           </article>
         </a>
@@ -301,42 +317,11 @@
       </div>
     </section>
     <!-- end of projects -->
-    <!-- connect -->
-    <section class="connect">
-      <video
-        controls
-        autoplay
-        muted
-        loop
-        class="video-container"
-        poster="./images/project-1.jpeg"
-      >
-        <source src="./videos/connect.mp4" type="video/mp4" />
-        Sorry, your browser does not support embedded videos
-      </video>
-      <div class="video-banner">
-        <!-- section title -->
-        <div class="section-title">
-          <h2>let's get in touch</h2>
-          <div class="underline"></div>
-        </div>
-        <!-- end of section title -->
-        <p class="video-text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi
-          eos ratione ducimus autem non voluptas ex quae ullam dolore! Amet
-          rerum quod autem minus eaque ullam. Distinctio dolorem itaque beatae
-          saepe obcaecati laudantium consectetur eaque blanditiis illo!
-          Nesciunt, non.
-        </p>
-        <a href="contact.html" class="btn">contact me</a>
-      </div>
-    </section>
-    <!-- end of connect -->
 
     <!-- timeline -->
 
     <!--end of  timeline -->
-    <!-- blog -->
+    <!-- Games -->
     <section class="section blog">
       <!-- section title -->
       <div class="section-title">
@@ -430,7 +415,38 @@
         <!--end of single article -->
       </div>
     </section>
-    <!--end of  blog -->
+    <!--end of  Games -->
+    <!-- connect -->
+    <section class="connect">
+      <video
+        controls
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="./images/project-1.jpeg"
+      >
+        <source src="./videos/connect.mp4" type="video/mp4" />
+        Sorry, your browser does not support embedded videos
+      </video>
+      <div class="video-banner">
+        <!-- section title -->
+        <div class="section-title">
+          <h2>let's get in touch</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- end of section title -->
+        <p class="video-text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam modi
+          eos ratione ducimus autem non voluptas ex quae ullam dolore! Amet
+          rerum quod autem minus eaque ullam. Distinctio dolorem itaque beatae
+          saepe obcaecati laudantium consectetur eaque blanditiis illo!
+          Nesciunt, non.
+        </p>
+        <a href="contact.html" class="btn">contact me</a>
+      </div>
+    </section>
+    <!-- end of connect -->
     <!-- footer -->
     <footer class="footer">
       <!-- social icons -->
