--- a/projects.html
+++ b/projects.html
@@ -228,10 +228,9 @@
           <div class="project-details">
             <h4>snakes & Apples</h4>
             <p>
-              Use A to go Left, D to go Right, and the Space Bar to shoot! Space
-              Invaders is a fixed shooter in which the player moves a laser
-              cannon horizontally across the bottom of the screen and fires at
-              aliens overhead.
+              Use the Arrow Keys to Control the Snake! Snakes & Apples is a free
+              thinking game for children and adults alike, where the goal is to
+              guide the snake to eat all the apples in their correct order.
             </p>
             <div class="project-footer">
               <span>
