--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
       <div class="section-center about-center">
         <!-- about img -->
         <article class="about-img">
-          <img src="./images/pexels03.jpg" class="hero-photo" alt="about-img" />
+          <img
+            src="./images/31-Malaga.jpeg"
+            class="hero-photo"
+            alt="about-img"
+          />
         </article>
         <!-- about info -->
         <article class="about-info">
