--- a/index.html
+++ b/index.html
@@ -160,19 +160,22 @@
           </div>
           <!-- end of section title -->
           <p>
+            Hello, I am Jorge Luque and I am a web developer. I live and work in
+            somewhere cold. I spend most of my day, experimenting with HTML, CSS
+            and JavaScript (and its endless list of frameworks). I enjoy coding
+            and the challenge of learning something new everyday. You can also
+            find me at my Facebook page
+            <a href="https://www.facebook.com/jorgelm78" target="_blank"
+              >Jorge Luque</a
+            >
+          </p>
+          <!-- <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
             optio nihil, inventore suscipit eveniet minus consequatur minima
             assumenda eum quisquam distinctio. Consequatur, fuga fugiat nulla
             corporis nisi labore veniam, distinctio consectetur, sunt modi
             dolorum atque deserunt architecto iure quaerat exercitationem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-            optio nihil, inventore suscipit eveniet minus consequatur minima
-            assumenda eum quisquam distinctio. Consequatur, fuga fugiat nulla
-            corporis nisi labore veniam, distinctio consectetur, sunt modi
-            dolorum atque deserunt architecto iure quaerat exercitationem.
-          </p>
+          </p> -->
           <a href="about.html" class="btn">about me</a>
         </article>
       </div>
