--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Jorge Luque || Contact Page</title>
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <!-- favicon -->
     <link rel="stylesheet" href="./images/favicon.ico" />
