--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- font-awesome -->
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <!-- favicon -->
     <link rel="stylesheet" href="./images/favicon.ico" />
