--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>Jorge Luque || Projects</title>
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <!-- favicon -->
     <link rel="stylesheet" href="./images/favicon.ico" />
@@ -115,7 +115,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -147,7 +147,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -179,7 +179,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -222,7 +222,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -254,7 +254,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -287,7 +287,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -330,7 +330,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -362,7 +362,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -394,7 +394,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -426,7 +426,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -458,7 +458,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -490,7 +490,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -522,7 +522,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -554,7 +554,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -584,7 +584,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -616,7 +616,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -648,7 +648,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -678,7 +678,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -710,7 +710,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -742,7 +742,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -774,7 +774,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -806,7 +806,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -838,7 +838,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -870,7 +870,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -902,7 +902,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -934,7 +934,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -966,7 +966,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -998,7 +998,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1030,7 +1030,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1062,7 +1062,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1094,7 +1094,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1126,7 +1126,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1158,7 +1158,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1190,7 +1190,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
@@ -1222,7 +1222,7 @@
               class="project-icon"
               target="_blank"
             >
-              <i class="fas fa-home"></i>
+              <i class="fa-solid fa-link"></i>
             </a>
           </div>
           <div class="project-details">
