contact email updated

--- a/contact.html
+++ b/contact.html
@@ -100,10 +100,11 @@
         <p>
           If you are looking to get ahold of me, you can send me an email at
           <a href="mailto:email@email.com">jorge.luque.martin@hts.edu</a>
+          or at <a href="mailto:email@email.com">ellendel@gmail.com</a>
         </p>
         <p>
           You can also reach me on Facebook at
-          <a href="https://www.facebook.com/jorgelm78">@Jorge-Luque </a>
+          <a href="https://www.facebook.com/jorgelm78">@ Jorge Luque </a>
         </p>
       </div>
     </section>
