update about me FB

--- a/about.html
+++ b/about.html
@@ -102,8 +102,8 @@
           somewhere cold. I spend most of my day, experimenting with HTML, CSS
           and JavaScript (and its endless list of frameworks). I enjoy coding
           and the challenge of learning something new everyday. You can also
-          find me at youtube channel
-          <a href="https://www.youtube.com/channel/UC8ZGrEHG-75kCdhlR4VuGVg" target="_blank">Jorge-Torquato</a>
+          find me on Facebook at
+          <a href="https://www.facebook.com/jorgelm78" target="_blank">Jorge Luque</a>
         </p>
 
     </section>
