Javascript projects reorganized

--- a/projects.html
+++ b/projects.html
@@ -324,9 +324,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/01-ColorFlipper.jpg" alt="single project" />
+            <img src="./images/29-e-commerce.jpg" />
             <a
-              href="https://js-01-colorflipper.netlify.app/"
+              href="https://js-29-e-commerce-store.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -334,7 +334,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript ColorFlipper project</h4>
+            <h4>Javascript comfy store</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -345,7 +345,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/01-ColorFlipper"
+                href="https://github.com/JorgeTorquato/29-e-commerce-store"
                 target="_blank"
                 >source code</a
               >
@@ -356,9 +356,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/02-counter.jpg" alt="single project" />
+            <img src="./images/28-wikipedia.jpg" />
             <a
-              href="https://js-02-counter-luque.netlify.app/"
+              href="https://js-28-wikipedia.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -366,7 +366,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript counter project</h4>
+            <h4>Javascript wikipedia project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -377,7 +377,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/02-counter"
+                href="https://github.com/JorgeTorquato/28-wikipedia"
                 target="_blank"
                 >source code</a
               >
@@ -388,9 +388,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/03-review-cards.jpg" alt="single project" />
+            <img src="./images/27-pagination.jpg" />
             <a
-              href="https://js-03-reviewscard-luque.netlify.app/"
+              href="https://js-27-github-pagination.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -398,7 +398,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript review cards project</h4>
+            <h4>Javascript pagination project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -409,7 +409,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/03-reviews"
+                href="https://github.com/JorgeTorquato/27-pagination"
                 target="_blank"
                 >source code</a
               >
@@ -420,9 +420,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/04-navbar.jpg" alt="single project" />
+            <img src="./images/22-products.jpg" />
             <a
-              href="https://js-04-navbar.netlify.app/"
+              href="https://mellifluous-meerkat-705133.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -430,7 +430,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript navbar project</h4>
+            <h4>Javascript products project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -441,7 +441,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/04-navbar"
+                href="https://github.com/JorgeTorquato/22-furniture"
                 target="_blank"
                 >source code</a
               >
@@ -452,9 +452,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/05-sidebar.jpg" alt="single project" />
+            <img src="./images/23-random-user.jpg" />
             <a
-              href="https://js-05-sidebar-project.netlify.app/"
+              href="https://js-23-random-user.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -462,7 +462,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript sidebar project</h4>
+            <h4>Javascript random user project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -473,7 +473,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/05-sidebar"
+                href="https://github.com/JorgeTorquato/23-random-user"
                 target="_blank"
                 >source code</a
               >
@@ -484,9 +484,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/06-modal.jpg" alt="single project" />
+            <img src="./images/24-cocktails.jpg" />
             <a
-              href="https://js-06-modal.netlify.app/"
+              href="https://js-24-cocktails.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -494,7 +494,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript modal project</h4>
+            <h4>Javascript cocktails website</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -505,7 +505,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/06-modal"
+                href="https://github.com/JorgeTorquato/24-cocktails"
                 target="_blank"
                 >source code</a
               >
@@ -516,9 +516,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/07-questions.jpg" alt="single project" />
+            <img src="./images/25-slider.jpg" />
             <a
-              href="https://js-07-questions.netlify.app/"
+              href="https://js-25-slider.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -526,7 +526,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript questions project</h4>
+            <h4>Javascript slider project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -537,7 +537,39 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/07-questions"
+                href="https://github.com/JorgeTorquato/25-slider"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/26-stripe.jpg" />
+            <a
+              href="https://js-26-stripe-submenus.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>Javascript stripe submenus</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/26-stripe-submenus"
                 target="_blank"
                 >source code</a
               >
@@ -989,12 +1021,13 @@
           </div>
         </article>
         <!--end of single project -->
+
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/22-products.jpg" />
+            <img src="./images/01-ColorFlipper.jpg" alt="single project" />
             <a
-              href="https://mellifluous-meerkat-705133.netlify.app/"
+              href="https://js-01-colorflipper.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1002,7 +1035,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript products project</h4>
+            <h4>Javascript ColorFlipper project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1013,7 +1046,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/22-furniture"
+                href="https://github.com/JorgeTorquato/01-ColorFlipper"
                 target="_blank"
                 >source code</a
               >
@@ -1024,9 +1057,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/23-random-user.jpg" />
+            <img src="./images/02-counter.jpg" alt="single project" />
             <a
-              href="https://js-23-random-user.netlify.app/"
+              href="https://js-02-counter-luque.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1034,7 +1067,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript random user project</h4>
+            <h4>Javascript counter project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1045,7 +1078,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/23-random-user"
+                href="https://github.com/JorgeTorquato/02-counter"
                 target="_blank"
                 >source code</a
               >
@@ -1056,9 +1089,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/24-cocktails.jpg" />
+            <img src="./images/03-review-cards.jpg" alt="single project" />
             <a
-              href="https://js-24-cocktails.netlify.app/"
+              href="https://js-03-reviewscard-luque.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1066,7 +1099,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript cocktails website</h4>
+            <h4>Javascript review cards project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1077,7 +1110,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/24-cocktails"
+                href="https://github.com/JorgeTorquato/03-reviews"
                 target="_blank"
                 >source code</a
               >
@@ -1088,9 +1121,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/25-slider.jpg" />
+            <img src="./images/04-navbar.jpg" alt="single project" />
             <a
-              href="https://js-25-slider.netlify.app/"
+              href="https://js-04-navbar.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1098,7 +1131,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript slider project</h4>
+            <h4>Javascript navbar project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1109,7 +1142,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/25-slider"
+                href="https://github.com/JorgeTorquato/04-navbar"
                 target="_blank"
                 >source code</a
               >
@@ -1120,9 +1153,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/26-stripe.jpg" />
+            <img src="./images/05-sidebar.jpg" alt="single project" />
             <a
-              href="https://js-26-stripe-submenus.netlify.app/"
+              href="https://js-05-sidebar-project.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1130,7 +1163,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript stripe submenus</h4>
+            <h4>Javascript sidebar project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1141,7 +1174,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/26-stripe-submenus"
+                href="https://github.com/JorgeTorquato/05-sidebar"
                 target="_blank"
                 >source code</a
               >
@@ -1152,9 +1185,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/27-pagination.jpg" />
+            <img src="./images/06-modal.jpg" alt="single project" />
             <a
-              href="https://js-27-github-pagination.netlify.app/"
+              href="https://js-06-modal.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1162,7 +1195,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript pagination project</h4>
+            <h4>Javascript modal project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1173,7 +1206,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/27-pagination"
+                href="https://github.com/JorgeTorquato/06-modal"
                 target="_blank"
                 >source code</a
               >
@@ -1184,9 +1217,9 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/28-wikipedia.jpg" />
+            <img src="./images/07-questions.jpg" alt="single project" />
             <a
-              href="https://js-28-wikipedia.netlify.app/"
+              href="https://js-07-questions.netlify.app/"
               class="project-icon"
               target="_blank"
             >
@@ -1194,7 +1227,7 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>Javascript wikipedia project</h4>
+            <h4>Javascript questions project</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
               impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
@@ -1205,7 +1238,7 @@
                 <i class="fab fa-github"></i>
               </span>
               <a
-                href="https://github.com/JorgeTorquato/28-wikipedia"
+                href="https://github.com/JorgeTorquato/07-questions"
                 target="_blank"
                 >source code</a
               >
@@ -1213,38 +1246,8 @@
           </div>
         </article>
         <!--end of single project -->
-        <!-- single project -->
-        <article class="single-project">
-          <div class="project-container">
-            <img src="./images/29-e-commerce.jpg" />
-            <a
-              href="https://js-29-e-commerce-store.netlify.app/"
-              class="project-icon"
-              target="_blank"
-            >
-              <i class="fa-solid fa-link"></i>
-            </a>
-          </div>
-          <div class="project-details">
-            <h4>Javascript comfy store</h4>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
-              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
-              consequatur!
-            </p>
-            <div class="project-footer">
-              <span>
-                <i class="fab fa-github"></i>
-              </span>
-              <a
-                href="https://github.com/JorgeTorquato/29-e-commerce-store"
-                target="_blank"
-                >source code</a
-              >
-            </div>
-          </div>
-        </article>
-        <!--end of single project -->
+
+        <!-- point -->
       </div>
     </section>
 
