--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,10 @@
           <!-- end of single item -->
           <!-- single item -->
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.linkedin.com/in/jorge-luque-martin-913898141/"
+              class="social-icon"
+            >
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
@@ -1263,7 +1266,10 @@
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/jorge-luque-martin-913898141/"
+            class="social-icon"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
