--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             ></a>
           </li>
           <li>
-            <a href="https://linkedin.com" class="social-icon"
+            <a
+              href="https://www.linkedin.com/in/jorge-luque-martin-913898141/"
+              class="social-icon"
               ><i class="fab fa-linkedin"></i
             ></a>
           </li>
@@ -110,7 +112,7 @@
             </li>
             <li>
               <a
-                href="https://linkedin.com"
+                href="https://www.linkedin.com/in/jorge-luque-martin-913898141/"
                 class="social-icon hero-icon"
                 target="_blank"
                 ><i class="fab fa-linkedin"></i
@@ -464,7 +466,9 @@
           ></a>
         </li>
         <li>
-          <a href="https://linkedin.com" class="social-icon"
+          <a
+            href="https://www.linkedin.com/in/jorge-luque-martin-913898141/"
+            class="social-icon"
             ><i class="fab fa-linkedin"></i
           ></a>
         </li>
