--- a/projects.html
+++ b/projects.html
@@ -1249,9 +1249,21 @@
           </div>
         </article>
         <!--end of single project -->
-
-        <!-- point -->
       </div>
+
+      <!-- ReactJs Projects -->
+      <section class="section">
+        <!-- section title -->
+        <div class="section-title">
+          <h2>React Projects</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- end of section title -->
+        <div class="section-center projects-page-center">
+          To be added soon...
+        </div>
+      </section>
+      <!-- point -->
     </section>
 
     <!-- footer -->
