--- a/projects.html
+++ b/projects.html
@@ -1260,7 +1260,38 @@
         </div>
         <!-- end of section title -->
         <div class="section-center projects-page-center">
-          To be added soon...
+                <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/Untitled.png" alt="single project" />
+            <a
+              href="https://01-react-monster-deck.netlify.app/"
+              class="project-icon"
+              target="_blank"
+            >
+              <i class="fa-solid fa-link"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>React Monster Deck</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+              impedit vel architecto debitis ipsa nihil, ipsam asperiores in aut
+              consequatur!
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a
+                href="https://github.com/JorgeTorquato/monster-rolodex"
+                target="_blank"
+                >source code</a
+              >
+            </div>
+          </div>
+        </article>
+        <!--end of single 
         </div>
       </section>
       <!-- point -->
